docs: convert docs from `gdoc` to `asciidoc`